noinst_LTLIBRARIES = libunp.la

AM_CFLAGS = $(LIBUNP_CFLAGS)

UNP_FILES =    \
    error.c  \
	mwriten.c  \
	readline.c  \
	readn.c     \
	sock_ntop.c  \
	unp.h       \
	wraplib.c   \
	wrapsock.c  \
	wrapunix.c  \
	$(NULL)

libunp_la_SOURCES =    \
    $(UNP_FILES)       \
	$(NULL)

libunp_la_CFLAGS =     \
    $(LIBUNP_CFLAGS)
