bin_PROGRAMS = \
	tcpcli01 \
	tcpcli04 \
	tcpcli09 \
	tcpcli11 \
    tcpserv01 \
	tcpserv02 \
	tcpserv03 \
	tcpserv04 \
	tcpserv08 \
	tcpserv09 \
	$(NULL)

AM_CPPFLAGS = \
    -I$(top_builddir)/lib \
	-g -O0 \
	$(NULL)

LDADD = \
    $(top_builddir)/lib/libunp.la \
	$(NULL)

tcpcli01_SOURCES = \
    tcpcli01.c\
    $(NULL)

tcpcli04_SOURCES = \
    tcpcli04.c\
    $(NULL)

tcpcli09_SOURCES = \
    tcpcli09.c\
    $(NULL)

tcpcli11_SOURCES = \
    tcpcli11.c\
    $(NULL)

tcpserv01_SOURCES = \
    tcpserv01.c \
	$(NULL)

tcpserv02_SOURCES = \
    tcpserv02.c\
    $(NULL)

tcpserv03_SOURCES = \
    tcpserv03.c\
    $(NULL)

tcpserv04_SOURCES = \
    tcpserv04.c\
    $(NULL)

tcpserv08_SOURCES = \
    tcpserv08.c\
    $(NULL)

tcpserv09_SOURCES = \
    tcpserv09.c\
    $(NULL)
